fix(css): Adjust spacing and layout

--- a/css/contact-us/contact-us-banner-section.css
+++ b/css/contact-us/contact-us-banner-section.css
@@ -1,7 +1,5 @@
 .contact-us-banner-container {
   position: relative;
-  /* border: 1px solid red; */
-  /* width: 80%; */
 }
 .contact-us-banner .contact-us-banner-container i img {
   width: 99vw;
@@ -10,21 +8,22 @@
 .contact-us-banner .contact-us-banner-container .contact-us-text-div {
   color: white;
   left: 15%;
-  top: 13vh;
+  top: 14vh;
   position: absolute;
   text-transform: uppercase;
 }
 .contact-us-banner .contact-us-banner-container .contact-us-text-div h1 {
-  font-size: 50px;
-  word-spacing: 6px;
+  font-size: 40px;
+  word-spacing: 4px;
   margin: 0;
   letter-spacing: 2px;
   font-weight: 400;
+  margin-bottom: 12px;
 }
 .contact-us-banner .contact-us-banner-container .contact-us-text-div span {
   word-spacing: 1px;
   margin: 0;
-  font-weight: 600;
+  font-weight: 550;
   font-size: 18px;
   letter-spacing: 2px;
 }
